--- a/pages/about.html
+++ b/pages/about.html
@@ -55,7 +55,7 @@
                         </p>
                     </div>
                     <div class="about__box">
-                        <div class="about_box_header">
+                        <div class="about_box_header between_center">
                             <h4 class="about_box_title">FIDO - Allinace Member</h4>
                             <img src="../img/icon/fido2.png" alt="" class="about_box_logo">
                         </div>
@@ -65,18 +65,19 @@
                         </p>
                     </div>
                     <div class="about__box">
-                        <div class="about_box_header">
+                        <div class="about_box_header between_center">
                             <h4 class="about_box_title">Swiss Made Software</h4>
                             <img src="../img/icon/SWISS_MADE.png" alt="" class="about_box_logo">
                         </div>
                         <p class="about_box_desc">
-                            Token2 is a member of <a href="#">swiss made software</a> label. The swiss made software label is dedicated
+                            Token2 is a member of <a href="#">swiss made software</a> label. The swiss made software
+                            label is dedicated
                             to promoting the Swiss software industry, both at home and abroad. It combines Swiss values
                             such as quality, reliability and precision – especially in software development.
                         </p>
                     </div>
                     <div class="about__box">
-                        <div class="about_box_header">
+                        <div class="about_box_header between_center">
                             <h4 class="about_box_title">Token2 <span class="tm">TM</span></h4>
                         </div>
                         <p class="about_box_desc">
@@ -86,7 +87,7 @@
                         </p>
                     </div>
                     <div class="about__box">
-                        <div class="about_box_header">
+                        <div class="about_box_header between_center">
                             <h4 class="about_box_title">Swiss Made Software</h4>
                             <i class="fa-regular fa-circle-info" style="font-size: 22px   ;"></i>
                         </div>
@@ -127,19 +128,42 @@
                         allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                         allowfullscreen></iframe>
                 </div>
-                <div class="about_keys_content">
-                    <h3 class="about_keys_title">FIDO2 and U2F Security Keys</h3>
-                    <p class="about_keys_desc">
-                        FIDO2 security keys are an unphishable standards-based passwordless authentication method that
-                        can come in any form factor. Token2 FIDO2 Security keys enable organizations and users to use a
-                        USB key to sign in without the need of entering a password (i.e. with Azure Passwordless) or can
-                        be used as a second factor (i.e. Google Accounts). Our USB keys also support U2F protocol for
-                        backward compatibility. Token2 is listed by Microsoft as a compatible FIDO2 security key
-                        provider for Azure AD Passwordless. <br> <br>
+                <div class="splide about__slider" role="group" aria-label="Splide Basic HTML Example">
+                    <div class="splide__track">
+                        <ul class="splide__list">
+                            <li class="splide__slide">
+                                <h3 class="about_keys_title">FIDO2 and U2F Security Keys</h3>
+                                <p class="about_keys_desc">
+                                    FIDO2 security keys are an unphishable standards-based passwordless
+                                    authentication method that
+                                    can come in any form factor. Token2 FIDO2 Security keys enable organizations and
+                                    users to use a
+                                    USB key to sign in without the need of entering a password (i.e. with Azure
+                                    Passwordless) or can
+                                    be used as a second factor (i.e. Google Accounts). Our USB keys also support U2F
+                                    protocol for
+                                    backward compatibility. Token2 is listed by Microsoft as a compatible FIDO2
+                                    security key
+                                    provider for Azure AD Passwordless. <br> <br>
 
-                        Token2 security keys are certified by the FIDO® Alliance
-                        (Level1 certification)
-                    </p>
+                                    Token2 security keys are certified by the FIDO® Alliance
+                                    (Level1 certification)
+                                </p>
+                            </li>
+                            <li class="splide__slide">
+                                <h3 class="about_keys_title">Lorem ipsum dolor sit amet.</h3>
+                                <p class="about_keys_desc">
+                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis in molestias ullam
+                                    esse neque eligendi magnam vero, nesciunt voluptatem libero officia ea delectus,
+                                    repudiandae ipsam vel quas, eos ducimus eius provident error dolorum eaque
+                                    recusandae sed? Neque quidem animi facilis, maxime tempora doloribus! Praesentium,
+                                    magnam sit. Incidunt, vero natus repellat commodi ipsum quisquam deserunt minus
+                                    alias explicabo odit tempore accusantium assumenda, ab omnis dignissimos fugiat
+                                    temporibus et! Doloribus, sequi quos?
+                                </p>
+                            </li>
+                        </ul>
+                    </div>
                 </div>
             </section>
             <section class="about__special">
@@ -239,6 +263,7 @@
         integrity="sha512-d8F1J2kyiRowBB/8/pAWsqUl0wSEOkG5KATkVV4slfblq9VRQ6MyDZVxWl2tWd+mPhuCbpTB4M7uU/x9FlgQ9Q=="
         crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="../js/bootstrap.bundle.min.js"></script>
+    <script src="../js/splide.min.js"></script>
     <script src="../js/about.js"></script>
 </body>
 
