feat:create guides and some changes

--- a/pages/faq.html
+++ b/pages/faq.html
@@ -46,7 +46,7 @@
             <div class="col mt-encriment">
                 <div class="row mb-3">
                     <div class="accordion col-12" id="accordionHeader">
-                        <div class="accordion-item text-secondary  border border-1 border-muted">
+                        <div class="accordion-item text-secondary border border-1 border-muted py-3 ">
                             <h2 class="accordion-header" id="heading0">
                                 <div class="accordion-button bg-white" type="button" data-bs-toggle="collapse"
                                     data-bs-target="#collapse0" aria-expanded="true" aria-controls="collapse0">
@@ -158,7 +158,7 @@
                 <div class="row flex-wrap" id="accordionMain">
                     <div class="col-lg-6 mb-3">
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading1">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse1" aria-expanded="true"
@@ -177,7 +177,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading2">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse2" aria-expanded="true"
@@ -199,7 +199,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading3">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse3" aria-expanded="true"
@@ -218,7 +218,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading4">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse4" aria-expanded="true"
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading5">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse5" aria-expanded="true"
@@ -258,7 +258,7 @@
                     </div>
                     <div class="col-lg-6 mb-3">
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading6">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse6" aria-expanded="true"
@@ -277,7 +277,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading7">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse7" aria-expanded="true"
@@ -296,7 +296,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading8">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse8" aria-expanded="true"
@@ -316,7 +316,7 @@
                             </div>
                         </div>
                         <div class="accordion col-12 mb-3">
-                            <div class="accordion-item text-secondary  border border-1 border-muted">
+                            <div class="accordion-item text-secondary  border border-1 border-muted py-3">
                                 <h1 class="accordion-header" id="heading9">
                                     <div class="accordion-button bg-white collapsed" type="button"
                                         data-bs-toggle="collapse" data-bs-target="#collapse9" aria-expanded="true"
@@ -334,7 +334,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-12 mb-3 bg-black bg-opacity-10 rounded py-lg-5 px-lg-3 px-2 py-5">
+                        <div class="col-12 mb-3 bg-black bg-opacity-10 rounded py-lg-4 px-lg-3 px-2 py-3" style="height: 370px;">
                             <h3 class="mx-2 mb-3">Didn’t found Your question?</h3>
                             <div class="row">
                                 <div class="mb-3">
